[gd_scene load_steps=2 format=3 uid="uid://wbeyntko06of"]

[ext_resource type="Script" uid="uid://c1355bb137k8d" path="res://assets/scenes/progress_display.gd" id="1_1o545"]

[node name="progress_display" type="VBoxContainer"]
script = ExtResource("1_1o545")
label_text = "Files Completed"
progress_todo = 1

[node name="hbox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="label" type="Label" parent="hbox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Files Completed"

[node name="label_progress_done" type="Label" parent="hbox"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="slash" type="Label" parent="hbox"]
layout_mode = 2
text = "/"
horizontal_alignment = 1

[node name="label_progress_todo" type="Label" parent="hbox"]
layout_mode = 2
text = "1"
horizontal_alignment = 2

[node name="progress_bar" type="ProgressBar" parent="."]
layout_mode = 2
max_value = 1.0
step = 1.0
